--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.yume.week104.myappgame20482.GameOverActivity"
+    android:background="#37e1c7b2"
     android:orientation="vertical">
 
     <TextView
@@ -48,6 +49,17 @@
         android:textColor="@color/menu_button_text"
         android:textSize="24sp"
         android:layout_marginTop="80dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/brown_title_back"/>
+    <Button
+        android:id="@+id/back_gameover_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="返回"
+        android:textColor="@color/menu_button_text"
+        android:textSize="24sp"
+        android:layout_marginTop="40dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/brown_title_back"/>
