--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="main_2048">40dp</dimen>
+    <dimen name="main_history_title">13sp</dimen>
+    <dimen name="main_score_title">23sp</dimen>
+    <dimen name="main_score">28sp</dimen>
+
+    <dimen name="main_history">23sp</dimen>
+    <dimen name="main_menu">17sp</dimen>
 </resources>
