--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
 
     <color name="menu">#ff82766c</color>
     <color name="menu_button_text">#ffffff</color>
+
+    <color name="test">#ffffff</color>
 </resources>
