--- a/app/src/main/res/layout/activity_time_mode.xml
+++ b/app/src/main/res/layout/activity_time_mode.xml
@@ -18,18 +18,17 @@
             android:orientation="vertical"
             android:weightSum="3">
             <TextView
-                android:id="@+id/title_mode_TextView"
                 android:layout_height="0dp"
                 android:layout_width="match_parent"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:text="经典模式"
+                android:text="时间模式"
                 android:textColor="@color/title_score"
                 android:textSize="@dimen/main_2048"
                 android:textStyle="bold"
                 android:background="@drawable/orange_title_back"/>
             <Button
-                android:id="@+id/menu_Button"
+                android:id="@+id/menu_TimeMode_Button"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -56,29 +55,29 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="分数"
+                    android:text="时间"
                     android:textSize="@dimen/main_score_title"
                     android:textColor="@color/title_text"
                     android:gravity="center"/>
                 <TextView
-                    android:id="@+id/nowScore_TextView"
+                    android:id="@+id/nowScore_TimeMode_TextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="12345"
+                    android:text="00:00.00"
                     android:textStyle="bold"
-                    android:textSize="@dimen/main_score"
+                    android:textSize="@dimen/time_score"
                     android:textColor="@color/title_score"
                     android:gravity="center"/>
             </LinearLayout>
             <!--<Button-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:layout_weight="1"-->
-                <!--android:layout_marginTop="10dp"-->
-                <!--android:background="@drawable/main_button_back"-->
-                <!--android:text="菜单"-->
-                <!--android:textColor="@color/title_score"/>-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:background="@drawable/main_button_back"-->
+            <!--android:text="菜单"-->
+            <!--android:textColor="@color/title_score"/>-->
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
@@ -97,23 +96,23 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="历史最高成绩"
+                    android:text="历史最快成绩"
                     android:textSize="@dimen/main_history_title"
                     android:textColor="@color/title_text"
                     android:gravity="center"/>
                 <TextView
-                    android:id="@+id/historyScore_TextView"
+                    android:id="@+id/historyScore_TimeMode_TextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="12345"
+                    android:text="00:00.00"
                     android:textStyle="bold"
-                    android:textSize="@dimen/main_history"
+                    android:textSize="@dimen/time_history"
                     android:textColor="@color/title_score"
                     android:gravity="center"/>
             </LinearLayout>
             <Button
-                android:id="@+id/restart_Button"
+                android:id="@+id/restart_TimeMode_Button"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -126,7 +125,7 @@
     </LinearLayout>
 
     <com.yume.week104.myappgame20482.twozerogame.TwoGameView
-        android:id="@+id/twoGameView"
+        android:id="@+id/twoGameView_TimeMode"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="4"/>
