--- a/app/src/main/res/values-tvdpi/dimens.xml
+++ b/app/src/main/res/values-tvdpi/dimens.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_2048">70dp</dimen>
+    <dimen name="main_2048">42dp</dimen>
     <dimen name="main_history_title">20sp</dimen>
     <dimen name="main_score_title">40sp</dimen>
     <dimen name="main_score">47sp</dimen>
 
     <dimen name="main_history">47sp</dimen>
     <dimen name="main_menu">26sp</dimen>
+
+    <dimen name="time_history">40sp</dimen>
+    <dimen name="time_score">40sp</dimen>
 </resources>
