--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="time_history">18sp</dimen>
     <dimen name="time_score">18sp</dimen>
 
+    <dimen name="button_height">50dp</dimen>
 </resources>
