--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,5 @@
     <dimen name="time_history">18sp</dimen>
     <dimen name="time_score">18sp</dimen>
 
-    <dimen name="button_height">wrap_content</dimen>
+    <dimen name="button_height">60dp</dimen>
 </resources>
